fix info icon spacing

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -90,7 +90,10 @@ h3 {
 
 .info-icon {
 	height: 80px;
-	padding: 0 30px 0 30px;
+	padding: 0 20px 0 20px;
+	@include breakpoint(medium) {
+		padding: 0 40px 0 40px;
+	}
 }
 
 .self-description-view {
